# groq-chat-ui

./: .gitignore  LICENSE  README.md
backend/: main.py  pyproject.toml
frontend/: bun.lockb  package.json
frontend/src/: App.css  App.tsx
