[tool.poetry]
name = "groq-chat-ui-backend"
version = "0.1.0"
description = ""
authors = ["cromz22 <tt.pfr4343@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
groq = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
